fix(admin): user participations info text color contrast

--- a/admin/app/styles/components/campaigns/participations-section.scss
+++ b/admin/app/styles/components/campaigns/participations-section.scss
@@ -4,6 +4,6 @@
 }
 
 .participations-section__subtitle {
-  color: var(--pix-neutral-100);
+  color: var(--pix-neutral-500);
   font-size: 0.875rem;
 }
